Use new UrlBuilder to construct refresh addresses